--- a/app/package.json
+++ b/app/package.json
@@ -3,16 +3,8 @@
   "version": "1.0.0",
   "description": "A minimal 360 video player",
   "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
   "repository": "https://github.com/littlstar/wonder3d",
   "author": "Andrew A. Grathwohl <andrew@littlstar.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "electron": "^1.4.1"
-  },
-  "dependencies": {
-    "raf": "^3.3.0"
-  }
+  "license": "MIT"
 }
+
