--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "A minimal 360 video player",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build-darwin": "node_modules/.bin/electron-packager . --darwin --overwrite",
+    "build-linux": "node_modules/.bin/electron-packager . --linux --overwrite",
+    "build-win32": "node_modules/.bin/electron-packager . --win32 --overwrite",
+    "build": "npm run-script build-darwin && npm run-script build-linux && npm run-script build-win32"
   },
   "repository": "https://github.com/littlstar/wonder3d",
   "author": "Andrew A. Grathwohl",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.4.1",
+    "electron-packager": "^8.3.0"
   },
   "dependencies": {
+    "axis3d": "0.0.10",
     "raf": "^3.3.0"
   }
 }
